--- a/source/Tutorials/MicroHH_to_raytracer_input.ipynb
+++ b/source/Tutorials/MicroHH_to_raytracer_input.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1e39d6a5",
+   "id": "37c83631",
    "metadata": {},
    "source": [
     "# MicroHH_to_raytracer_input step-by-step"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e55c443e",
+   "id": "52d948fa",
    "metadata": {},
    "source": [
     "This is the notebook version of /python/microhh_to_raytracer_input.py.\n",
@@ -18,14 +18,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7035704e",
+   "metadata": {},
+   "source": [
+    "We first import the required modules"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "12cfdbe8",
+   "execution_count": 1,
+   "id": "511607c5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import required modules\n",
-    "import microhh_tools as mht  # available in microhh/python directory\n",
+    "import microhh_tools as mht  \n",
     "import numpy as np\n",
     "import netCDF4 as nc\n",
     "from scipy.interpolate import interp1d\n",
@@ -33,13 +40,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8f148a00",
+   "metadata": {},
+   "source": [
+    "Here we define the function that computes the solar zenith and azimuth angle from the location and time as well as a function that determines the distance from the sun to scale the top of atmosphere incoming radiation."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "f89afe7a",
+   "execution_count": null,
+   "id": "96a7bfc4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define functions to compute the position of the sun and the relative humidity\n",
     "def solar_angles(lon, lat, day_of_year, year, seconds_since_midnight):\n",
     "    #Based on: Paltridge, G. W. and Platt, C. M. R. (1976).\n",
     "    #                 Radiative Processes in Meteorology and Climatology.\n",
@@ -92,15 +106,46 @@
     "    for n in range(3):\n",
     "        factor += an[n]*np.cos(n*t) + bn[n]*np.sin(n*t);\n",
     "\n",
-    "    return factor\n",
-    "\n",
+    "    return factor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8208bf66",
+   "metadata": {},
+   "source": [
+    "We define a helper function to read the liquid and ice water contents if they are provided"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7c6573ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def read_if_exists(var, t, dims):\n",
     "    try:\n",
     "        return np.fromfile(\"{}.{:07d}\".format(var,t),TF).reshape(dims)\n",
     "    except:\n",
-    "        return np.zeros(dims)\n",
-    "\n",
-    "# functions to compute the relative humidity\n",
+    "        return np.zeros(dims)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "968b976a",
+   "metadata": {},
+   "source": [
+    "In addition, we define some functions to calculate the relative humidity "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bf193d24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Rd = 287.04\n",
     "Rv = 461.5\n",
     "ep = Rd/Rv\n",
@@ -125,14 +170,13 @@
     "\n",
     "def qsat(p, T):\n",
     "    alpha = water_fraction(T)\n",
-    "    return alpha*qsat_liq(p, T) + (1.-alpha)*qsat_ice(p, T)\n",
-    "\n"
+    "    return alpha*qsat_liq(p, T) + (1.-alpha)*qsat_ice(p, T)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "c78f1271",
+   "execution_count": 3,
+   "id": "cd5af203",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,8 +202,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "3c1b38b9",
+   "execution_count": 4,
+   "id": "d680de08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,8 +217,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "a1fd438a",
+   "execution_count": 5,
+   "id": "a8c24a17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,8 +230,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "cab30eb0",
+   "execution_count": 6,
+   "id": "da0b2adc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,8 +259,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "a86c6ac2",
+   "execution_count": 7,
+   "id": "bd497bf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,8 +271,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "9a479cd4",
+   "execution_count": 8,
+   "id": "b11a08d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,8 +282,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "83d5d0a0",
+   "execution_count": 9,
+   "id": "cbe1ce23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,8 +295,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "01d2cf0f",
+   "execution_count": 10,
+   "id": "23db4fcf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,8 +313,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "a726b545",
+   "execution_count": 11,
+   "id": "88f48aab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,8 +338,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "a8dd3a43",
+   "execution_count": 12,
+   "id": "626c6805",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,8 +354,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "d37fd0f6",
+   "execution_count": 13,
+   "id": "32cb29df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,8 +382,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "99649493",
+   "execution_count": 14,
+   "id": "5dc5eb64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,8 +415,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "bb559aac",
+   "execution_count": 15,
+   "id": "ea1bb899",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,8 +431,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "42fc6301",
+   "execution_count": 16,
+   "id": "0d825bb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,8 +443,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "88cba1f7",
+   "execution_count": 17,
+   "id": "04f4b715",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,8 +617,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "b777f52b",
+   "execution_count": 18,
+   "id": "fa5b55ec",
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +627,7 @@
        "dict_keys(['band_sw', 'band_lw', 'lay', 'lev', 'x', 'y', 'z', 'xh', 'yh', 'zh'])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,8 +638,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "a4ea5841",
+   "execution_count": 19,
+   "id": "071ba138",
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +648,7 @@
        "dict_keys(['x', 'y', 'z', 'xh', 'yh', 'zh', 'zlay', 'z_lev', 'p_lay', 'p_lev', 'rho', 'vmr_h2o', 't_lay', 't_lev', 'lwp', 'rel', 'iwp', 'rei', 'sfc_alb_dir', 'sfc_alb_dif', 'emis_sfc', 't_sfc', 'mu0', 'azi', 'tsi_scaling', 'vmr_co2', 'vmr_o3', 'vmr_n2o', 'vmr_ch4', 'vmr_o2', 'vmr_n2', 'ngrid_x', 'ngrid_y', 'ngrid_z'])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,8 +659,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "f426c2b9",
+   "execution_count": 20,
+   "id": "0e30ba42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7725872",
+   "id": "a82465e0",
    "metadata": {},
    "outputs": [],
    "source": []
